Remove Useless Things and setup